Fix readability in related cases block

--- a/assets/styles/layouts/_cases.scss
+++ b/assets/styles/layouts/_cases.scss
@@ -73,7 +73,6 @@
 				.related-item-title{
 					position: absolute;
 					bottom: 0;
-					height:40px;
 					width: 100%;
 					text-align: center;
 
